# bevy_modal_editor

./: .gitattributes  CLAUDE.md  Cargo.toml  README.md  design.md  flake.nix  scene.ron
.claude/agents/: architecture-guardian.md  ux-design-reviewer.md
.claude/skills/: 3d-preview.md  add-plugin.md  add-scene-component.md  command-palette.md  editor-operation.md  new-entity-type.md  ui-design.md  ui-panel.md
art/: particle_meshes.blend  particle_meshes.blend1
assets/: Duck.glb  default_scene.ron  test_scene.ron
assets/effects/: Falling Impact.fx.ron  Pulsing Beacon.fx.ron
assets/libraries/: particle_meshes.glb
assets/materials/: Arch Default.mat.ron  Arch Default.ron  Bricks PBR.mat.ron  Capsule Default.mat.ron  Capsule Default.ron  Cube Default.mat.ron  Cube Default.ron  Cylinder Default.mat.ron  Cylinder Default.ron  Dingas.mat.ron  Dingas.ron  E.mat.ron  Ef.mat.ron  Effe.mat.ron  Effect1.mat.ron  Ey.mat.ron  L-Shape Default.mat.ron  L-Shape Default.ron  Plane Default.mat.ron  Plane Default.ron  Ramp Default.mat.ron  Ramp Default.ron  Sphere Default.mat.ron  Sphere Default.ron  Stairs Default.mat.ron  Stairs Default.ron
assets/objects/: wizard_front_Green_cloaked_wizard_with_pointed_hat_Hunyuan_3D_84ef0016.glb
assets/particles/: Fire.pfx.ron  Fountain.pfx.ron  Magic Orb.pfx.ron  Smoke.pfx.ron  Snow.pfx.ron  Sparks.pfx.ron
assets/prefabs/new_prefab/: new_prefab.scn.ron
assets/prefabs/tower/: tower.scn.ron
assets/scenes/: decal_test.scn.ron  dude.scn.ron  scene.scn.ron
assets/skybox/: citrus_orchard_road_puresky_4k_cubemap.ktx2  citrus_orchard_road_puresky_4k_diffuse.ktx2  citrus_orchard_road_puresky_4k_specular.ktx2
assets/vfx/: BEST PART 8.vfx.ron  Campfire.vfx.ron  Dust Motes.vfx.ron  Embers.vfx.ron  Explosion.vfx.ron  Fire.vfx.ron  Fireflies.vfx.ron  Flamethrower.vfx.ron  Fountain.vfx.ron  Heal Aura.vfx.ron  Laser.vfx.ron  Magic Orb.vfx.ron  Portal.vfx.ron  Rain.vfx.ron  Rock Debris.vfx.ron  Smoke.vfx.ron  Snow.vfx.ron  Sparks.vfx.ron  Waterfall.vfx.ron
crates/ai_demo/: Cargo.toml
crates/bevy_channel_mat/: Cargo.toml
crates/bevy_channel_mat/src/: channel_threshold.wgsl  lib.rs  material.rs
crates/bevy_editor_game/: Cargo.toml
crates/bevy_grid_shader/: Cargo.toml
crates/bevy_grid_shader/examples/: basic.rs
crates/bevy_grid_shader/src/: grid.wgsl  lib.rs  material.rs
crates/bevy_outliner/: Cargo.toml
crates/bevy_outliner/src/: jfa_material.rs  lib.rs
crates/bevy_procedural/: Cargo.toml
crates/bevy_procedural/src/: lib.rs  placer.rs  projection.rs  sampling.rs  spline_sampling.rs
crates/bevy_spline_3d/: Cargo.toml  README.md
crates/bevy_spline_3d/examples/: path_follow.rs
crates/bevy_spline_3d/src/: lib.rs  surface.rs
crates/bevy_spline_3d/src/distribution/: components.rs  mod.rs  systems.rs
crates/bevy_spline_3d/src/editor/: gizmos.rs  mod.rs  selection.rs
crates/bevy_spline_3d/src/path_follow/: components.rs  mod.rs  systems.rs
crates/bevy_vfx/: Cargo.toml
crates/bevy_vfx/src/: curve.rs  data.rs  lib.rs  mesh_particles.rs  presets.rs
crates/bevy_vfx/src/gpu/: buffers.rs  extract.rs  mod.rs  node.rs  pipeline.rs  prepare.rs
crates/bevy_vfx/src/render/: billboard.rs  mod.rs
crates/bevy_vfx/src/shaders/: billboard.wgsl  common.wgsl  compact.wgsl  spawn.wgsl  update.wgsl
crates/fp_demo/: Cargo.toml
crates/fp_demo/assets/: textures
crates/fp_demo/assets/levels/: locomotion_arena.scn.ron
crates/fp_demo/src/: coins.rs  main.rs  player.rs  sounds.rs  timer.rs
crates/fp_demo/src/levels/: level_gen.rs  locomotion_arena.rs  mod.rs
crates/marble_demo/: Cargo.toml  marble.ron
crates/marble_demo/assets/: Duck.glb  fonts
crates/marble_demo/assets/effects/: Falling Impact.fx.ron
crates/marble_demo/assets/levels/: the_descent.ron  the_gauntlet.scn.ron  the_spiral.scn.ron
crates/marble_demo/assets/materials/: Arch Default.mat.ron  Cube Default.mat.ron  L-Shape Default.mat.ron
crates/marble_demo/assets/particles/: Fountain.pfx.ron  Magic Orb.pfx.ron  Smoke.pfx.ron  Sparks.pfx.ron
crates/marble_demo/src/: checkerboard.rs  checkerboard.wgsl  game_camera.rs  main.rs  marble.rs  sounds.rs  timer.rs
crates/marble_demo/src/levels/: level_gen.rs  mod.rs  the_descent.rs  the_gauntlet.rs  the_spiral.rs
examples/: simple.rs  with_existing_scene.rs
src/: constants.rs  lib.rs  main.rs  utils.rs
src/asset_libraries/: mod.rs
src/commands/: history.rs  mod.rs  operations.rs
src/editor/: blockout.rs  camera.rs  game.rs  input.rs  insert.rs  marks.rs  mod.rs  play.rs  plugin.rs  scene_loading.rs  spline_edit.rs  state.rs
src/effects/: data.rs  mod.rs  presets.rs
src/gizmos/: mod.rs  transform.rs
src/materials/: channel_threshold.rs  grid.rs  mod.rs
src/modeling/: bevel.rs  boolean.rs  bridge.rs  catmull_clark.rs  cut.rs  delete.rs  edge_loop.rs  edit_mesh.rs  extrude.rs  fill_hole.rs  gizmos.rs  half_edge.rs  input.rs  inset.rs  marker.rs  mirror.rs  mod.rs  normals.rs  plane_cut.rs  push_pull.rs  remesh.rs  select_ops.rs  selection.rs  simplify.rs  smooth.rs  snap.rs  soft_select.rs  uv_project.rs  uv_seam.rs  uv_unwrap.rs  weld.rs
src/navigation/: mod.rs
src/particles/: build.rs  data.rs  mod.rs  presets.rs
src/patterns/: circular.rs  linear.rs  mod.rs
src/prefabs/: assets.rs  create.rs  editing.rs  mod.rs  prefab.rs  registry.rs  spawn.rs
src/scene/: collider_constructor.rs  gltf_source.rs  mod.rs  primitives.rs  scene_source.rs  serialization.rs  splat_source.rs
src/selection/: mod.rs  selection.rs
src/ui/: ai_editor.rs  asset_browser.rs  camera_settings.rs  command_palette.rs  component_browser.rs  edit_info.rs  effect_editor.rs  entity_picker.rs  file_dialog.rs  find_object.rs  fuzzy_palette.rs  gltf_preview.rs  hierarchy.rs  insert_preview.rs  inspector.rs  marks.rs  material_editor.rs  material_preset_palette.rs  material_preview.rs  mesh_model_panel.rs  mod.rs  panels.rs  particle_editor.rs  prefab_preview.rs  preview_common.rs  reflect_editor.rs  settings.rs  theme.rs  toolbar.rs  uv_editor_panel.rs  validation.rs  vfx_editor.rs  view_gizmo.rs
src/vfx/: mod.rs
(+27 files in other folders)
