[package]
name = "bevy_modal_editor"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A modal level editor plugin for Bevy games with Avian3D physics support"
repository = "https://github.com/Nub/bevy_modal_editor"
keywords = ["bevy", "editor", "modal", "level-editor", "avian3d"]
categories = ["game-development", "game-engines"]

[lib]
name = "bevy_modal_editor"
path = "src/lib.rs"

[[bin]]
name = "bevy_modal_editor"
path = "src/main.rs"

[dependencies]
bevy = "0.18"
avian3d = { version = "0.5", features = ["debug-plugin"] }
bevy_egui = { git = "https://github.com/vladbat00/bevy_egui", branch = "main" }
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
bevy_spline_3d = { path = "../bevy_spline_3d" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
dirs = "6"
fuzzy-matcher = "0.3"
egui-file-dialog = "0.12"

[dev-dependencies]
bevy = { version = "0.18", features = ["dynamic_linking"] }

[features]
default = []
# Enable dynamic linking for faster compile times during development
dynamic = ["bevy/dynamic_linking"]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "with_existing_scene"
path = "examples/with_existing_scene.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
bevy_egui = { git = "https://github.com/vladbat00/bevy_egui", branch = "main" }
