[workspace]
resolver = "2"
members = [".", "crates/bevy_outliner", "crates/bevy_spline_3d", "crates/bevy_grid_shader", "crates/bevy_editor_game", "crates/marble_demo"]

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nub/bevy_modal_editor"

[workspace.dependencies]
bevy = { version = "0.18", features = ["file_watcher", "embedded_watcher", "reflect_documentation"] }
avian3d = { version = "0.5", default-features = true, features = ["debug-plugin"] }
bevy_egui = { git = "https://github.com/vladbat00/bevy_egui", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
bytemuck = { version = "1.0", features = ["derive"] }
bitflags = "2.6"
bevy_outliner = { path = "crates/bevy_outliner" }
bevy_spline_3d = { path = "crates/bevy_spline_3d" }
bevy_grid_shader = { path = "crates/bevy_grid_shader" }
bevy_editor_game = { path = "crates/bevy_editor_game" }

[package]
name = "bevy_modal_editor"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "A modal level editor plugin for Bevy games with Avian3D physics support"
repository.workspace = true
keywords = ["bevy", "editor", "modal", "level-editor", "avian3d"]
categories = ["game-development", "game-engines"]

[lib]
name = "bevy_modal_editor"
path = "src/lib.rs"

[[bin]]
name = "bevy_modal_editor"
path = "src/main.rs"

[dependencies]
bevy.workspace = true
avian3d.workspace = true
bevy_egui.workspace = true
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
bevy_spline_3d.workspace = true
bevy_outliner.workspace = true
bevy_grid_shader.workspace = true
bevy_editor_game.workspace = true
serde.workspace = true
ron.workspace = true
dirs = "6"
fuzzy-matcher = "0.3"
egui_commonmark = "0.22"


[dev-dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }

[features]
default = []
dynamic = ["bevy/dynamic_linking"]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "with_existing_scene"
path = "examples/with_existing_scene.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
bevy_egui = { git = "https://github.com/vladbat00/bevy_egui", branch = "main" }
