[package]
name = "bevy_grid_shader"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "A Bevy plugin providing a world-space grid shader material with PBR lighting"
repository.workspace = true
keywords = ["bevy", "shader", "grid", "material", "pbr"]
categories = ["game-development", "graphics", "rendering"]

[lib]
path = "src/lib.rs"

[dependencies]
bevy.workspace = true
bitflags.workspace = true

[dev-dependencies]
bevy = { workspace = true, features = ["bevy_camera_controller", "free_camera"] }

[[example]]
name = "basic"
path = "examples/basic.rs"

[features]
default = []

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
